[package]
name = "lcov2cobertura"
version = "1.0.5"
edition = "2021"
license = "Apache-2.0"
description = "convert LCOV info file to cobertura XML format"
repository = "https://github.com/mike-kfed/lcov2cobertura"
keywords = ["coverage", "gitlab", "cobertura", "lcov"]
rust-version = "1.73"

[dependencies]
anyhow = "1.0.86"
quick-xml = "0.31.0"
regex = "1.7.3"
rustc-demangle = "0.1.24"

[lib]
name = "lcov2cobertura"
